--- a/angular.json
+++ b/angular.json
@@ -62,8 +62,8 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "mp:build:production",
-              "proxyConfig": "src/proxy.config.json"
+              "browserTarget": "mp:build:production"
+              
             }
           }
         },
